--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -1,2 +1,14 @@
-body
-	background-color #ccc
+@import 'nib'
+
+// MAIN
+
+global-reset()
+
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100);
+
+html, body
+	overflow hidden
+	font-family: 'Roboto', sans-serif;
+
+@import 'desktop/gallery'
+@import 'desktop/thumbnails'
