--- a/src/css/desktop/thumbnails.styl
+++ b/src/css/desktop/thumbnails.styl
@@ -1,5 +1,10 @@
 .desktop
 	
 	#thumbnails
-
 		background-color #e74747
+		ul
+			clearfix()
+		li
+			float left
+		img
+			border-radius (150px/2)
