--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -7,7 +7,7 @@ global-reset()
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100);
 
 html, body
-	//overflow hidden
+	overflow hidden
 	font-family: 'Roboto', sans-serif;
 
 @import 'desktop/gallery'
