--- a/src/templates/desktop/gallery.html
+++ b/src/templates/desktop/gallery.html
@@ -1,3 +1,6 @@
 <div id="gallery">
-	GALLERY
+	<a href="#" id="gallery-left">left</a>
+	<a href="#" id="gallery-up">up</a>
+	<a href="#" id="gallery-right">right</a>
+	<div id="gallery-content"></div>
 </div>
