--- a/src/css/desktop/thumbnails.styl
+++ b/src/css/desktop/thumbnails.styl
@@ -1,18 +1,17 @@
 .desktop
 	
 	#thumbnails
-		background-color #e74747
 		white-space nowrap
 		position relative
+		perspective 400
 
 		#thumbnails-group
+			transform-style preserve-3d
 			> div
 				display inline-block
 				width 150px
 				height 150px
 				position absolute
-
-				//margin-left 15px
 
 				img
 					border-radius (150px/2)
