--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -10,5 +10,11 @@ html, body
 	overflow hidden
 	font-family: 'Roboto', sans-serif;
 
+#content
+	background url
+	background url(../images/bg/sky.jpg) top left no-repeat
+	background-size 100% 100%
+
 @import 'desktop/gallery'
 @import 'desktop/thumbnails'
+@import 'desktop/background'
