--- a/src/css/desktop/gallery.styl
+++ b/src/css/desktop/gallery.styl
@@ -2,4 +2,14 @@
 	
 	#gallery
 
-		background-color #35c3f4
+		background-color black
+		
+		a
+			position absolute
+			
+	#gallery-content
+		text-align center
+
+		img
+			width auto
+			height 100%
