--- a/src/css/desktop/thumbnails.styl
+++ b/src/css/desktop/thumbnails.styl
@@ -19,3 +19,16 @@
 
 				&:first-child
 					margin-left 0
+					
+	.thumbsnails-title
+		margin 0 0 70px -50%
+		position absolute
+		opacity 0
+		width 300px
+		
+		p
+			text-align center
+			color white
+			font-size 24px
+		
+			
