--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -4,14 +4,17 @@
 
 global-reset()
 
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100);
+//@import url(http://fonts.googleapis.com/css?family=Roboto:400,100);
+//@import url(http://fonts.googleapis.com/css?family=Noto+Serif);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed)
 
 html, body
 	overflow hidden
-	font-family: 'Roboto', sans-serif;
+	//font-family 'Noto Serif', serif
+	font-family 'Roboto Condensed', sans-serif
+	
 
 #content
-	background url
 	background url(../images/bg/sky.jpg) top left no-repeat
 	background-size 100% 100%
 
