--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,15 +4,20 @@ ol,ul{list-style:none}
 table{border-collapse:separate;border-spacing:0;vertical-align:middle}
 caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}
 a img{border:none}
-@import url("http://fonts.googleapis.com/css?family=Roboto:400,100");
-html,body{overflow:hidden;font-family:'Roboto',sans-serif}
-#content{background:url;background:url("../images/bg/sky.jpg") top left no-repeat;-webkit-background-size:100% 100%;-moz-background-size:100% 100%;background-size:100% 100%}
-.desktop #gallery{background-color:#35c3f4}
+@import url("http://fonts.googleapis.com/css?family=RobotoCondensed");
+html,body{overflow:hidden;font-family:'Roboto Condensed',sans-serif}
+#content{background:url("../images/bg/sky.jpg") top left no-repeat;-webkit-background-size:100% 100%;-moz-background-size:100% 100%;background-size:100% 100%}
+.desktop #gallery{background-color:#000;}
+.desktop #gallery a{position:absolute}
+.desktop #gallery-content{text-align:center;}
+.desktop #gallery-content img{width:auto;height:100%}
 .desktop #thumbnails{white-space:nowrap;position:relative;-webkit-perspective:400;-moz-perspective:400;-ms-perspective:400;perspective:400;}
 .desktop #thumbnails #thumbnails-group{-webkit-transform-style:preserve-3d;-moz-transform-style:preserve-3d;-o-transform-style:preserve-3d;-ms-transform-style:preserve-3d;transform-style:preserve-3d;}
 .desktop #thumbnails #thumbnails-group > div{display:inline-block;width:150px;height:150px;position:absolute;}
 .desktop #thumbnails #thumbnails-group > div img{-webkit-border-radius:75px;border-radius:75px;-webkit-box-shadow:0 0 5px #000;box-shadow:0 0 5px #000}
 .desktop #thumbnails #thumbnails-group > div:first-child{margin-left:0}
+.desktop .thumbsnails-title{margin:0 0 70px -50%;position:absolute;opacity:0;filter:alpha(opacity=0);-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";width:300px;}
+.desktop .thumbsnails-title p{text-align:center;color:#fff;font-size:24px}
 #background{-webkit-perspective:400;-moz-perspective:400;-ms-perspective:400;perspective:400}
 #background-clouds{-webkit-transform-style:preserve-3d;-moz-transform-style:preserve-3d;-o-transform-style:preserve-3d;-ms-transform-style:preserve-3d;transform-style:preserve-3d;}
 #background-clouds > div{width:256px;height:256px;position:absolute}
