--- a/src/templates/desktop/gallery.html
+++ b/src/templates/desktop/gallery.html
@@ -1,6 +1,6 @@
 <div id="gallery">
 	<a href="#" id="gallery-left">left</a>
-	<a href="#" id="gallery-up">up</a>
+	<a href="#" id="gallery-close">up</a>
 	<a href="#" id="gallery-right">right</a>
 	<div id="gallery-content"></div>
 </div>
