--- a/src/css/desktop/gallery.styl
+++ b/src/css/desktop/gallery.styl
@@ -3,13 +3,38 @@
 	#gallery
 
 		background-color black
-		
 		a
 			position absolute
-			
 	#gallery-content
 		text-align center
 
 		img
 			width auto
 			height 100%
+
+	a#gallery-left
+
+		width: 46px
+		height: 46px
+		background: url(../images/main/sprites.png) -238px -116px no-repeat
+
+		&:hover
+			background: url(../images/main/sprites.png) -249px -34px no-repeat
+
+	a#gallery-right
+
+		width: 46px
+		height: 46px
+		background: url(../images/main/sprites.png) -295px -34px no-repeat
+
+		&:hover
+			background: url(../images/main/sprites.png) -284px -116px no-repeat
+
+	a#gallery-close
+
+		width: 46px
+		height: 46px
+		background: url(../images/main/sprites.png) -284px -162px no-repeat
+
+		&:hover
+			background: url(../images/main/sprites.png) -238px -162px no-repeat
