--- a/src/templates/desktop/thumbnails.html
+++ b/src/templates/desktop/thumbnails.html
@@ -1,2 +1,4 @@
 <div id="thumbnails">
+	<div id="thumbnails-header"></div>
+	<a href="http://blog.bebensiganteng.com/" id="thumbnails-about" target="_blank" title="Bebensiganteng"></a>
 </div>
