--- a/src/css/desktop/thumbnails.styl
+++ b/src/css/desktop/thumbnails.styl
@@ -1,5 +1,7 @@
+center-ring = (150px - 238px) /2
+
 .desktop
-	
+
 	#thumbnails
 		white-space nowrap
 		position relative
@@ -19,16 +21,44 @@
 
 				&:first-child
 					margin-left 0
-					
+
 	.thumbsnails-title
 		margin 0 0 70px -50%
 		position absolute
 		opacity 0
 		width 300px
-		
+
 		p
 			text-align center
 			color white
 			font-size 24px
-		
-			
+
+	#thumbnails-header
+		position absolute
+		top 35px
+		left 50%
+		margin-left (-112px/2)
+
+	#thumbnails-about
+		position absolute
+		bottom 0
+		left 50%
+
+	#thumbsnails-bg
+		position absolute
+		left center-ring
+		top center-ring
+		z-index -10
+
+	.thumbsnails-selected
+		transform scale(0,0)
+		opacity 0
+		width: 238px
+		height: 238px
+		background: url(../images/main/sprites.png) 0px 0px no-repeat
+	
+	#thumbnails-black
+		background-color black
+		position absolute
+		transform translateZ(-10px) scale(1.2, 1.2)
+		opacity 0
