--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -4,15 +4,28 @@
 
 global-reset()
 
+@import '../images/main/sprites'
+
 //@import url(http://fonts.googleapis.com/css?family=Roboto:400,100);
-//@import url(http://fonts.googleapis.com/css?family=Noto+Serif);
-@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed)
+//@import url("http://fonts.googleapis.com/css?family=Noto+Serif:400italic");
+//@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed)
+//@import url('//fonts.googleapis.com/css?family=Open+Sans:300')
+//@import url("http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300")
+//@import url("http://fonts.googleapis.com/css?family=Droid+Serif")
+//@import url("http://fonts.googleapis.com/css?family=Lobster")
+//@import url("http://fonts.googleapis.com/css?family=The+Girl+Next+Door")
+@import url("http://fonts.googleapis.com/css?family=PT+Sans")
 
 html, body
 	overflow hidden
-	//font-family 'Noto Serif', serif
-	font-family 'Roboto Condensed', sans-serif
 	
+
+p
+	//font-family 'Open Sans Condensed', sans-serif
+	//font-family 'Droid Serif', serif
+	//font-family: 'Lobster', cursive
+	font-family: 'PT Sans', sans-serif
+	font-weight: 400
 
 #content
 	background url(../images/bg/sky.jpg) top left no-repeat
