--- a/src/css/desktop/background.styl
+++ b/src/css/desktop/background.styl
@@ -25,5 +25,9 @@
 		height 256px
 		position absolute
 
+#background-rain
+	position absolute
+	z-index -1000
+
 // .cloudAnim
 // 	animation fly 5s infinite linear
