--- a/src/css/desktop/thumbnails.styl
+++ b/src/css/desktop/thumbnails.styl
@@ -15,6 +15,9 @@ center-ring = (150px - 238px) /2
 				height 150px
 				position absolute
 
+				a
+					opacity 0
+
 				img
 					border-radius (150px/2)
 					box-shadow 0 0 5px black
@@ -62,3 +65,12 @@ center-ring = (150px - 238px) /2
 		position absolute
 		transform translateZ(-10px) scale(1.2, 1.2)
 		opacity 0
+
+	.thumbnails-arrow
+		position: absolute
+		left (150px/2) - (34px/2)
+		top 0
+		opacity 0
+		width: 34px
+		height: 22px
+		background: url(../images/main/sprites.png) -303px -34px no-repeat
