--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -31,6 +31,12 @@ p
 	background url(../images/bg/sky.jpg) top left no-repeat
 	background-size 100% 100%
 
+#preloader
+	position: absolute
+	margin-left -30px
+	top: 50%
+	left: 50%
+
 @import 'desktop/gallery'
 @import 'desktop/thumbnails'
 @import 'desktop/background'
