--- a/src/images/main/sprites.styl
+++ b/src/images/main/sprites.styl
@@ -14,37 +14,37 @@
   background: url(../images/main/sprites.png) -238px -34px no-repeat
 
 // #btn_left_pressed
-//   width: 46px
-//   height: 46px
+//   width: 54px
+//   height: 54px
 //   background: url(../images/main/sprites.png) -249px -34px no-repeat
 
 // #btn_right_normal
-//   width: 46px
-//   height: 46px
-//   background: url(../images/main/sprites.png) -295px -34px no-repeat
-
-// #btn_left_normal
-//   width: 46px
-//   height: 46px
+//   width: 54px
+//   height: 54px
 //   background: url(../images/main/sprites.png) -238px -116px no-repeat
 
+// #btn_left_normal
+//   width: 54px
+//   height: 54px
+//   background: url(../images/main/sprites.png) -292px -116px no-repeat
+
 // #btn_right_pressed
-//   width: 46px
-//   height: 46px
-//   background: url(../images/main/sprites.png) -284px -116px no-repeat
+//   width: 54px
+//   height: 54px
+//   background: url(../images/main/sprites.png) -238px -170px no-repeat
 
 // #btn_up_pressed
-//   width: 46px
-//   height: 46px
-//   background: url(../images/main/sprites.png) -238px -162px no-repeat
+//   width: 54px
+//   height: 54px
+//   background: url(../images/main/sprites.png) -292px -170px no-repeat
 
 // #btn_up_normal
-//   width: 46px
-//   height: 46px
-//   background: url(../images/main/sprites.png) -284px -162px no-repeat
+//   width: 54px
+//   height: 54px
+//   background: url(../images/main/sprites.png) 0px -238px no-repeat
 
-#arrowwhite
-  width: 34px
-  height: 22px
-  background: url(../images/main/sprites.png) -249px -80px no-repeat
+// #arrowwhite
+//   width: 34px
+//   height: 22px
+//   background: url(../images/main/sprites.png) -303px -34px no-repeat
 
