--- a/src/templates/desktop/gallery.html
+++ b/src/templates/desktop/gallery.html
@@ -1,4 +1,7 @@
 <div id="gallery">
+	<div id="gallery-preload"><img src="images/preloader.gif" width="60" height="15" /></div>
+	<div id="gallery-thumbleft"></div>
+	<div id="gallery-thumbright"></div>
 	<a href="#" id="gallery-left"></a>
 	<a href="#" id="gallery-close"></a>
 	<a href="#" id="gallery-right"></a>
