--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -13,15 +13,15 @@ html, body
 
 p
 	font-family: 'PT Sans', sans-serif
-	font-weight: 400
+	font-weight 400
 
 *
 	-webkit-user-select: none
-    -khtml-user-select: none
-    -moz-user-select: none
-    -ms-user-select: none
-    -o-user-select: none
-    user-select: none
+	-khtml-user-select: none
+	-moz-user-select: none
+	-ms-user-select: none
+	-o-user-select: none
+	user-select: none
 
 
 
@@ -32,7 +32,7 @@ p
 #copyright
 	position absolute
 	bottom 10px
-	left 10px
+	right 10px
 
 	z-index 1000
 
@@ -40,6 +40,7 @@ p
 		font-size 10px
 		color white
 		line-height 16px
+		text-align right
 
 	a
 		color #f1b9c4
