--- a/src/css/desktop/thumbnails.styl
+++ b/src/css/desktop/thumbnails.styl
@@ -7,6 +7,9 @@ center-ring = (150px - 238px) /2
 		position relative
 		perspective 400
 
+		//http://blog.joelambert.co.uk/2012/02/13/3d-transformations-with-firefox-10/
+		-moz-transform: perspective(400px)
+
 		&:hover
 			cursor url(../images/hand.cur), move
 			cursor -webkit-grab
@@ -62,7 +65,7 @@ center-ring = (150px - 238px) /2
 
 	.thumbsnails-selected
 		transform scale(0.5,0.5)
-		//opacity 0
+		opacity 0
 		width: 238px
 		height: 238px
 		background: url(../images/main/sprites.png) 0px 0px no-repeat
